# POTMS

./: .gitignore  README.md  app.py  auth.py  build.bat  config.py  data.db  database.py  init_reset.py  requirements-dev.txt  requirements.txt  开发需求文档.html  系统优化审定报告.html  系统评审报告.html
blueprints/: certificate.py  dashboard.py  decontrol.py  dict_admin.py  export.py  import_data.py  logs.py  organization.py  personnel.py  search.py  submit_unit.py  travel.py
exports/: 出国明细表_20260703_115643_admin.xlsx  出国明细表_20260703_132730_admin.xlsx  备案人员信息登记表_20260703_132730_admin.xlsx  备案人员信息登记表_20260703_133425_admin.xlsx  撤控备案表_20260703_115643_admin.xlsx  撤控备案表_20260703_132730_admin.xlsx  (+8 more)
potms-go/: .gitignore  (+22 more)
potms-rust/: .gitignore  Cargo.toml  README.md
potms-rust/src/: backup.rs  config.rs  db.rs  excel.rs  handlers_auth.rs  handlers_certificate.rs  handlers_dashboard.rs  handlers_decontrol.rs  handlers_export.rs  handlers_import.rs  handlers_misc.rs  handlers_personnel.rs  handlers_travel.rs  helpers.rs  main.rs  render.rs  security.rs  session.rs  validators.rs
potms-rust/templates/: account.html  base.html
potms-rust/templates/certificate/: list.html
potms-rust/templates/components/: pagination.html
potms-rust/templates/decontrol/: form.html  view.html
potms-rust/templates/import/: form.html
potms-rust/templates/logs/: view.html
potms-rust/templates/organization/: tree.html
potms-rust/templates/personnel/: filing_form.html  info_form.html  list.html
potms-rust/templates/submit_unit/: list.html
potms-rust/templates/travel/: attachments.html  form.html
(+68 files in other folders)
